--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,6 @@
 			<artifactId>spring-security-web</artifactId>
 		</dependency>
 
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -92,6 +91,66 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.12</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <configuration>
+                            <excludes>
+                                <exclude>**/model/**</exclude>
+								<exclude>**/config/**</exclude>
+								<exclude>**/GameRoomController.class</exclude>
+								<exclude>**/UserController.class</exclude>
+								<exclude>**/GameRoomRequest.class</exclude>
+								<exclude>**/GameRoomService.class</exclude>
+								<exclude>**/SnakeGameHandler.class</exclude>
+								<exclude>**/SnakeProyectApplication.class</exclude>
+								<exclude>**/SnakeGameService.class</exclude>
+                         </excludes>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>jacoco-check</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <rule>
+                                    <element>PACKAGE</element>
+									<excludes>
+										<exclude>**/BBConfigurator.class</exclude>
+										<exclude>**/MvcConfig.class</exclude>
+										<exclude>**/BBAppStarter.class</exclude>
+										<exclude>**/BBEndpoint.class</exclude>
+										<exclude>**/RedisConfig.class</exclude>
+										<exclude>**/WebSecurityConfig.class</exclude>
+									</excludes>
+                                    <limits>
+                                        <limit>
+                                            <counter>CLASS</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.80</minimum><!--Porcentaje mínimo de cubrimiento para construir el proyecto-->
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 
